# geocoreg

./: .gitignore  LICENSE  README.md  environment-dev.yml  pyproject.toml
examples/: example.ipynb  naip_example.tif
src/geocoreg/: registrator_factory.py  registrators.py  visualization.py  xr_registration.py
