[build-system]
requires = ["setuptools", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "geocoreg"
dynamic = ["version"]
readme = "README.md"
description = "A package for geospatial data co-registration"
keywords = ["GIS", "image registration", "satellite image", "xarray"]
classifiers = [
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
license = {text = "MIT License"}
requires-python = ">=3.8"
dependencies = [
    "xarray",
    "numpy",
    "kornia",
    "scikit-image",
    "scikit-learn",
]

[tool.setuptools.packages.find]
where = ["src"]  # list of folders that contain the packages (["."] by default)
include = ["*"]  # package names should match these glob patterns (["*"] by default)
#exclude = []  # exclude packages matching these glob patterns (empty by default)

[tool.setuptools_scm]  # Automatically set the version number based on git tags

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100